<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calculadora.MainActivity" >

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv" />
    <Button 
        android:id="@+id/boton7"
        android:layout_below="@id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton7"/>
    <Button 
        android:id="@+id/boton8"
        android:layout_below="@id/tv"
        android:layout_toRightOf="@id/boton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton8"/>
    <Button 
        android:id="@+id/boton9"
        android:layout_below="@id/tv"
        android:layout_toRightOf="@id/boton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton9"/>
    <Button 
        android:id="@+id/boton4"
        android:layout_below="@id/boton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton4"/>
    <Button 
        android:id="@+id/boton5"
        android:layout_below="@id/boton8"
        android:layout_toRightOf="@id/boton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton5"/>
    <Button 
        android:id="@+id/boton6"
        android:layout_below="@id/boton9"
        android:layout_toRightOf="@id/boton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton6"/>
    <Button 
        android:id="@+id/boton1"
        android:layout_below="@id/boton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton1"/>
    <Button 
        android:id="@+id/boton2"
        android:layout_below="@id/boton5"
        android:layout_toRightOf="@id/boton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton2"/>
    <Button 
        android:id="@+id/boton3"
        android:layout_below="@id/boton6"
        android:layout_toRightOf="@id/boton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton3"/>
    <Button 
        android:id="@+id/boton0"
        android:layout_below="@id/boton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton0"/>
    <Button 
        android:id="@+id/botonPunto"
        android:layout_below="@id/boton2"
        android:layout_toRightOf="@id/boton0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonPunto"/>
    <Button 
        android:id="@+id/botonC"
        android:layout_below="@id/boton3"
        android:layout_toRightOf="@id/botonPunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonC"/>
    <Button 
        android:id="@+id/botonSuma"
        android:layout_below="@id/tv"
        android:layout_toRightOf="@id/boton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonSuma"/>
    <Button 
        android:id="@+id/botonResta"
        android:layout_below="@id/botonSuma"
        android:layout_toRightOf="@id/boton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonResta"/>
    <Button 
        android:id="@+id/botonMulti"
        android:layout_below="@id/botonResta"
        android:layout_toRightOf="@id/boton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonMulti"/>
    <Button 
        android:id="@+id/botonDiv"
        android:layout_below="@id/botonMulti"
        android:layout_toRightOf="@id/botonC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonDiv"/>
    <Button 
        android:id="@+id/botonIgual"
        android:layout_toRightOf="@id/botonSuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/botonSuma"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/boton0"
        android:text="@string/botonIgual"/>

</RelativeLayout>
